<resources>
    <string name="app_name">TLG</string>
    <string name="project_details">Project Details</string>
    <string name="search">Search</string>
    <string name="share_project">Share Project</string>
    <string name="tags_for_project">Tags for project %1$s</string>
    <string name="schedule_label">Schedule: </string>
    <string name="tags_label">Tags: </string>
    <string name="project_name_label">Name: </string>
    <string name="by_name">by name:</string>
    <string name="by_tag">by tag:</string>
    <string name="by_schedule">by schedule:</string>
    <string name="by_due">due:</string>
    <string name="gradient_content_description">Gradient to make schedule information more visible.</string>
    <string name="project_image_content_description">Thumbnail image for the time lapse project.</string>
    <string name="detail_photo_content_description">Thumbnail image of one of the frames of a project.</string>
    <string name="detail_current_image_content_description">The currently selected image belonging to the project.</string>
    <string name="first_image_content_description">The first image for the project.</string>
    <string name="widget_grid_item_content_description">Project thumbnail image for a grid item in the widget.</string>
    <string name="schedule_indicator_content_description">Indicator showing that a project has been scheduled.</string>
    <string name="schedule_indicator_check_content_description">Indicator showing that a project has been scheduled and a picture has been taken today.</string>
    <string name="previous_photo_content_description">Image of the previous photo in the set.</string>
    <string name="new_photo_content_description">Image of the new photo in the set.</string>
    <string name="fullscreen_image_content_description">Fullscreen view of the currently selected photo.</string>
    <string name="projects_recycler_view_content_description">Shows the last image taken for each project.</string>
    <string name="add_project_FAB_content_description">Adds a new project.</string>
    <string name="add_first_photo_fab_content_description">Adds a photo to a new project.</string>
    <string name="submit_new_project_fab_content_description">Submits a project.</string>
    <string name="notification_schedule_spinner_content_description">Sets the schedule for a project.</string>
    <string name="play_as_video_fab_content_description">Loads the set of photos in order.</string>
    <string name="fullscreen_fab_content_description">Shows a fullscreen dialog of the current photo.</string>
    <string name="details_recyclerview_content_description">Shows the set of photos belonging to a time lapse project.</string>
    <string name="add_photo_fab_content_description">Launches the add photo activity for a time lapse project.</string>
    <string name="fullscreen_back_fab_content_description">Closes the fullscreen image dialog and returns to project details.</string>
    <string name="take_photo_fab_content_description">Requests a camera application to take a photo.</string>
    <string name="return_to_details_fab">Returns from adding a photo to the projects details.</string>
    <string name="submit_photo_fab_content_description">Submits the photo returned from a camera application to the project.</string>
    <string name="compare_to_previous_fab_content_description">Compares the photo returned from a camera application to the last photo taken for the project.</string>
    <string name="sync_image_feedback_content_description">Image feedback for the result of syncing files to the database.</string>
    <string name="schedule_management_fab_content_description">Fab to manage the schedule for a project."</string>
    <string name="project_information_fab_management_content_description">Fab to manage information for a project."</string>
    <string name="project_tag_fab_content_description">Fab to manage tags for a project.</string>
    <string name="content_description_schedule_dialog_exit_fab">Fab to exit the schedule dialog for a project.</string>
    <string name="content_description_quick_compare_fab">Fab to compare to the previous picture for a time-lapse project</string>
    <string name="content_description_take_picture_fab">Fab to take a picture.</string>
    <string name="content_description_project_tag_exit_fab">Fab to exit the project tags dialog.</string>
    <string name="content_description_add_tag_fab">Fab to add a tag to the list of tags and associate it with a project.</string>
    <string name="content_description_info_exit_fab">Fab to exit the project information dialog.</string>
    <string name="content_description_edit_project_name_fab">Fab to edit the name of a project.</string>
    <string name="content_description_search_active_fab">Fab indicating a search is active that clears the search if clicked.</string>
    <string name="content_description_edit_text_project_name">Edit text field to edit the name of a project.</string>
    <string name="content_description_schedule_selector_none">Field to select no schedule for a project.</string>
    <string name="content_description_schedule_selector_days">Field to select an interval of %1$d days for a project schedule.</string>
    <string name="content_description_schedule_selector_weeks">Field to select an interval of %1$d weeks for a project schedule.</string>
    <string name="content_description_schedule_selector_custom">Field to select a custom interval for a project schedule.</string>
    <string name="content_description_search_edit_text">Edit text field to search for a project by name.</string>
    <string name="content_description_image_load_error">Indicator showing there was an error loading the current photo.</string>
    <string name="cd_rotation_indicator">Indicator showing device orientation does not match image orientation</string>
    <string name="cd_widget_branding">Branding for the Time Lapse Gallery widget showing a camera with a clock.</string>
    <string name="cd_widget_branding_plus">A small plus icon next to the Time Lapse Gallery brand indicating a link to adding photos.</string>
    <string name="cd_info_dialog_icon">Info indicator for the project information dialog.</string>
    <string name="cd_gallery_item_bottom_gradient">Gradient on the bottom of a gallery item for highlighting a check mark if a photo was taken today.</string>
    <string name="cd_camera_previous_photo">The last photo for a time-lapse project if it exists.</string>
    <string name="cd_weather_recyclerview">Displays localized weather data from the National Weather Service api.</string>
    <string name="cd_gif_preview">Imageview showing the set of images animated as a time lapse gif.</string>
    <string name="disable_notifications">Disable notifications</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="delete_photo">Delete photo</string>
    <string name="delete_tag">Delete tag #%1$s</string>
    <string name="delete_project">Delete project</string>
    <string name="edit_project">Edit project</string>
    <string name="enabling_notifications">Enabling notifications</string>
    <string name="disabling_notifications">Disabling notifications</string>
    <string name="add_more_photos">Add more photos to play!</string>
    <string name="verify_delete_project">Are you sure you wish to delete the project?</string>
    <string name="verify_delete_photo">Are you sure you wish to delete this photo?</string>
    <string name="verify_delete_tag">This will delete the tag #%1$s and remove it from all associated projects.\n\n
        Do you wish to continue? </string>
    <string name="verify_delete_last_photo">This is the last photo in the project. Would you like to delete the project instead?</string>
    <string name="double_verify_project_deletion">Please verify to confirm.</string>
    <string name="project_name">Project Name</string>
    <string name="unnamed">unnamed</string>
    <string name="none">none</string>
    <string name="no_projects_tagged">no projects tagged</string>
    <string name="edit_tags"><u>edit tags</u></string>
    <string name="edit_name">Edit Name</string>
    <string name="manage_tags">Manage tags</string>
    <string name="add_tag">Add Tag</string>
    <string name="delete">delete</string>
    <string name="project_id_label">Id:</string>
    <string name="new_tag_text">#newtag</string>
    <string name="invalid_tag">Invalid Tag</string>
    <string name="invalid_tag_empty">Tags must not be empty.</string>
    <string name="invalid_tag_length">Tags must not be longer than 14 characters.</string>
    <string name="invalid_tag_one_word">Tags must be one word.</string>
    <string name="hashtag">#%1$s</string>
    <string name="x_projects_due_today">%1$d projects due today</string>
    <string name="projects_due_today">You have projects due today.</string>
    <string name="details_photo_number_out_of" translatable="false">%1$d / %2$d</string>
    <string name="today">Today</string>
    <string name="scheduled">Scheduled</string>
    <string name="every_x_days">Every %1$s day(s)</string>
    <string name="due">Due</string>
    <string name="due_today">Due Today</string>
    <string name="due_tomorrow">Due Tomorrow</string>
    <string name="pending">Pending</string>
    <string name="unscheduled">Unscheduled</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="number_of_days">In %1$d Days</string>
    <string name="timespan">%1$s - %2$s</string>
    <string name="next">Next photo: %1$s at %2$s</string>
    <string name="project_identification">%1$d %2$s</string>
    <string name="transition_tag" translatable="false">transition tag</string>
    <string name="default_aspect_ratio" translatable="false">3:4</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="no_name_message">Please enter a name to submit the project.</string>
    <string name="invalid_characters_message">Please enter a name containing alpha numeric characters only.</string>
    <string name="no_picture">No Picture</string>
    <string name="no_picture_message">Please add an initial picture to submit the project.</string>
    <string name="error">Error</string>
    <string name="edit_failed">Edit failed to submit.</string>
    <string name="error_loading_image">Error loading image.</string>
    <string name="analytics_add_photo" translatable="false">add_photo</string>
    <string name="analytics_new_project" translatable="false">new_project</string>
    <string name="analytics_delete_photo" translatable="false">delete_photo</string>
    <string name="analytics_delete_project" translatable="false">delete_project</string>
    <string name="analytics_add_tag" translatable="false">add_tag</string>
    <string name="analytics_delete_tag" translatable="false">delete_tag</string>
    <string name="ok">OK</string>
    <string name="notifications_header">Notifications</string>
    <string name="enable_notifications_title">Enable notifications</string>
    <string name="notifications_summary_on">Notifications allowed</string>
    <string name="notifications_summary_off">Notifications disabled</string>
    <string name="notification_time_title">Notification time</string>
    <string name="playback_header">Playback</string>
    <string name="playback_interval_title">Playback speed</string>
    <string name="sync_header">Database Sync</string>
    <string name="sync_title">Sync database to files</string>
    <string name="key_notifications_enabled" translatable="false">notifications_enabled</string>
    <string name="key_notification_time" translatable="false">notification_time</string>
    <string name="key_sync" translatable="false">sync</string>
    <string name="key_add_transition" translatable="false">add</string>
    <string name="tag_deletion_instruction">Tap to toggle. Tap and hold to delete.</string>
    <string name="project_information">Project Information</string>
</resources>