<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Notifications -->
    <PreferenceCategory app:title="@string/notifications_header">

        <!-- Notifications enabled -->
        <SwitchPreferenceCompat
            app:key="@string/key_notifications_enabled"
            app:title="@string/enable_notifications_title"
            app:summaryOff="@string/notifications_summary_off"
            app:summaryOn="@string/notifications_summary_on"/>

        <!-- Notification time -->
        <ListPreference
            app:key="@string/key_notification_time"
            app:title="@string/notification_time_title"
            app:entries="@array/notification_time_entries"
            app:entryValues="@array/notification_time_values"
            app:dependency="@string/key_notifications_enabled"/>

    </PreferenceCategory>

    <!-- Playback settings -->
    <PreferenceCategory app:title="@string/playback_header">

        <!-- Playback interval -->
        <ListPreference
            app:key="50ms"
            app:title="@string/playback_interval_title"
            app:entries="@array/playback_interval_entries"
            app:entryValues="@array/playback_interval_values"/>
    </PreferenceCategory>

    <!-- File sync -->
    <PreferenceCategory app:title="@string/sync_header">

        <Preference
            app:key="@string/key_sync"
            app:title="@string/sync_title"
            app:summary=""/>

        <!--
        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />
        -->

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
