<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context="com.vwoom.timelapsegallery.camera2.Camera2Fragment">

    <com.vwoom.timelapsegallery.camera2.common.AutoFitTextureView
        android:id="@+id/camera_preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/previous_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/cd_camera_previous_photo"
        android:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/take_picture_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:contentDescription="@string/content_description_take_picture_fab"
        android:src="@drawable/ic_add_a_photo_white_24dp"
        android:transitionName="@string/key_add_transition"
        app:fabCustomSize="@dimen/fab_jumbo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="@dimen/fab_max_image_size" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/quick_compare_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:contentDescription="@string/content_description_quick_compare_fab"
        android:src="@drawable/ic_compare_white_24dp"
        app:fabCustomSize="@dimen/fab_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/take_picture_fab"
        app:maxImageSize="@dimen/fab_max_image_size" />

</androidx.constraintlayout.widget.ConstraintLayout>
